force-app/main/default/objects/Custom_Exception__c/Custom_Exception__c.object-meta.xml
<CustomObject>
    <label>Custom Exception</label>
    <nameField>
        <label>Custom Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
<!-- Gitting -->
</CustomObject>