force-app/main/default/objects/Custom_Exception__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
<!-- Gitting -->
</CustomField>