force-app/main/default/objects/Custom_Exception__c/fields/Exception_message__c.field-meta.xml
<CustomField>
    <fullName>Exception_message__c</fullName>
    <label>Exception message</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>