force-app/main/default/objects/Custom_Exception__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Custom Exceptions</relationshipLabel>
    <relationshipName>Custom_Exceptions</relationshipName>
    <type>Lookup</type>
<!-- Gitting -->
</CustomField>