force-app/main/default/objects/Custom_Exception__c/fields/Next_Retry_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_Time__c</fullName>
    <label>Next Retry Time</label>
    <type>DateTime</type>
<!-- Gitting -->
</CustomField>