force-app/main/default/objects/Custom_Exception__c/fields/RequestJSON__c.field-meta.xml
<CustomField>
    <fullName>RequestJSON__c</fullName>
    <label>RequestJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>