force-app/main/default/objects/Custom_Exception__c/fields/ResponseJSON__c.field-meta.xml
<CustomField>
    <fullName>ResponseJSON__c</fullName>
    <label>ResponseJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>