force-app/main/default/objects/Custom_Exception__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>